[package]
name = "rcryptfs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
byteorder = "1.5.0"
camino = "1.2.2"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = { version = "2.1.1", features = ["from", "into"] }
eme-mode = "0.3.1"
filetime = "0.2.27"
generic-array = "1.3.5"
hkdf = "0.12.4"
libc = "0.2.180"
log = "0.4.29"
parking_lot = "0.12.5"
positioned-io = "0.3.5"
rand = "0.9.2"
rpassword = "7.4.0"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
rustyline = "17.0.2"
serde_json = "1.0.149"
sha2 = "0.10.9"
strum_macros = "0.27.2"
typenum = "1.19.0"
vfs = "0.12.2"


[target.'cfg(not(windows))'.dependencies]
fuse_mt = "0.6.2"
xattr = "1.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
] }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
strip = "none"
lto = false
codegen-units = 16
